// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<p
  class="yozora-paragraph custom-class"
  style="color:orange"
>
  some text1
  <span>
    some text2
  </span>
</p>
`;

exports[`snapshot default 1`] = `
<p
  class="yozora-paragraph"
>
  some text1
  <span>
    some text2
  </span>
</p>
`;
